location bulk patch now accepts setting parent locations to null.  swagger API documentation nearly up-to-date...TODO: authentication and authorization scopes
